@startuml

title __USARIOMENU's Class Diagram__\n

  namespace com.example.cardihealt {
    namespace UsarioMenu {
      class com.example.cardihealt.UsarioMenu.InicioFragment {
          ~ activity : Activity
          ~ cardActualizar : CardView
          ~ cardCerrarsesion : CardView
          ~ cardEncuesta : CardView
          ~ cardInformacion : CardView
          ~ cardInforme : CardView
          ~ cardRecomendaciones : CardView
          ~ vista : View
          {static} - ARG_PARAM1 : String
          {static} - ARG_PARAM2 : String
          - gso : GoogleSignInOptions
          - mAuth : FirebaseAuth
          - mDatabase : DatabaseReference
          - mGoogleSignInClient : GoogleSignInClient
          - mParam1 : String
          - mParam2 : String
          + InicioFragment()
          + borrarInfo()
          {static} + newInstance()
          + onCreate()
          + onCreateView()
      }
    }
  }
  

  namespace com.example.cardihealt {
    namespace UsarioMenu {
      class com.example.cardihealt.UsarioMenu.Menu {
          ~ fragmentInicio : Fragment
          - mAuth : FirebaseAuth
          - mDatabase : DatabaseReference
          + onKeyDown()
          # onCreate()
      }
    }
  }
  

  com.example.cardihealt.UsarioMenu.InicioFragment -up-|> androidx.fragment.app.Fragment
  com.example.cardihealt.UsarioMenu.Menu -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
